--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,3 +1,5 @@
 @import "main-components/home";
+@import "main-components/navbar";
+@import "main-components/login";
 @import "main-components/doghousecard";
 @import "main-components/_doghousedetail";
