--- a/client/src/styles/main-components/_home.scss
+++ b/client/src/styles/main-components/_home.scss
@@ -3,14 +3,15 @@
   .headerSection{
     height: 50vh;
     .headerLeft{
-      background-color: #6C63FF;
+      background-color: #6b63ff38;
       border-radius: 60% 40% 70% 30% / 43% 77% 23% 57%;
+      color: #000;
       h1{
-        font-size: 2.5em;
-        font-weight: 700;
+        font-size: 4em;
+        font-weight: 300;
       }
       p{
-        font-size: 15px;
+        font-size: 17px;
       }
     }
     img{
